.provarCaches/00D5h000009Q6XQEA0/objects/Pokemon__c.object
<CustomObject>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Images__c</fullName>
        <label>Images</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <label>Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pokemons</relationshipLabel>
        <relationshipName>Pokemons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pokemon</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pokemon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>